- Added style for ToolTip

--- a/Main/Source code/.NET Framework 4.5/Elysium/Themes/Generic.tt
+++ b/Main/Source code/.NET Framework 4.5/Elysium/Themes/Generic.tt
@@ -72,7 +72,8 @@
             @"Buttons\ToggleCommandButton.xaml",
             @"Buttons\DropDownCommandButton.xaml",
             @"ApplicationBar\ApplicationBar.xaml",
-
+            
+            @"Windows\ToolTip.xaml",
             @"..\..\.NET Framework 4.5\Elysium\Themes\Windows\Window.xaml"
         };
 
