--- a/Main/Source code/.NET Framework 4/Elysium/Themes/Generic.tt
+++ b/Main/Source code/.NET Framework 4/Elysium/Themes/Generic.tt
@@ -73,7 +73,8 @@
             @"Buttons\ToggleCommandButton.xaml",
             @"Buttons\DropDownCommandButton.xaml",
             @"ApplicationBar\ApplicationBar.xaml",
-
+            
+            @"Windows\ToolTip.xaml",
             @"..\..\.NET Framework 4\Elysium\Themes\Windows\Window.xaml"
         };
 
