- Fixed problems with project and item templates instalation - Added new part of documentation: Window and window's elements - Fixed errors in documentation - Fixed some errors

--- a/Main/Source code/Elysium.Test/MainWindow.xaml
+++ b/Main/Source code/Elysium.Test/MainWindow.xaml
@@ -22,7 +22,8 @@
             </Grid.ColumnDefinitions>
             <Button Grid.Column="1"
                     Content="?"
-                    Click="HelpClick"/>
+                    Click="HelpClick"
+                    Style="{DynamicResource {x:Static metro:Window.MainWindowCaptionButtonStyleKey}}"/>
         </Grid>
     </metro:Window.TitleBar>
     <metro:Window.ApplicationBar>
